# mitm

./: CMakeLists.txt  COPYING  README.md  TODO  mitm.pc.in
src/: assert.hpp  cstream.cpp  heuristic-classic.cpp  heuristic-gpgpu.cu  internal.hpp  io.cpp  io.hpp  log.hpp  main.cpp  matrix.hpp  mitm.cpp  negative-coeff.cpp  wedelin-default.cpp
src/mitm/: mitm.hpp
tests/: assignment_problem.cpp  assignment_problem_input.conf  internal.cpp  n-queens-problem.cpp
